# repo_demo

./: .gitignore  2  2_diemnsion.py  3_diemnsion.py  Git_and_Docker.md  README.md  help.txt  igv  log_on.py  this_is_first_vscode_python.py
Business/LED/: get_info.cpp  get_info.h  led_server.cpp  led_server.sh  libcharset.so.1  libiconv.so.2  makefile  test  test.cpp
Business/http_bridge/: http_bridge.py
Business/led_server/: CMakeLists.txt  package.xml
Business/led_server/src/: led_server.cpp  pub.cpp
C++/: README.md
C++/algorithm/: fill.cpp  main  random_shuffle.cpp  replace.cpp  swap.cpp
C++/demo/: cpu  cuda  cuda.cu  test
C++/pointer/: int_pointer.cpp
C++/time/: time
Docker/: dev_start.sh
Docker/Dockerfile/: Dockerfile
Document/: C++_learning.md  Git_and_Docker.md  git_server(http).md  i2c.md  perf 数据分析.md  system_performance.md  ubuntu.md  多设备文件夹同步.md  现场支持近期问题及解决方案.md  问题收集.md
Encryption/: Des.py  test.py  test1.py
Go/: README.md  deploy.md
Go/golangView/: conf.yaml  main.go  syslog
Go/learning/: StatsCheck.go  conf.yaml  go.mod  go.sum  iota.go  supervisor.go  upload.go  var.go
Go/versionCheck/: VersionCheck.go  conf.yaml
LED/: led_server.cpp  led_server.sh  refactoring_led.cpp  test.cpp  testcpp
Monitor/: demo.py  file_monitor.py  test.py
Python/Encryption/: test.py
Python/demo/: Decimal_conversion.py  sftp.py  upload.py  upload_nas.py  wellsim.py
Python/logging/: upload.py
Python/login_design/: log_on.py
Python/pyautogui/: Click_test.py  block.py
Robot_Operating_System/: colcon  test.cpp
Robot_Operating_System/ros2_test/: View_linear_x.py  function_test.py  sub.py  test.py  turtle1_pub.py
Robot_Operating_System/ros2_ws/: colcon
Robot_Operating_System/src/: README.md
Ros/ros2_test/: coordinate_transfer_tianjin.py  function_test.py  pose_create.py  sub.py
Ros/ros2_ws/: colcon
Ros/src/led_server/: CMakeLists.txt
Ros/src/led_server/src/: pub.cpp
Vehicle_Tools/: ABC堆场出入口.csv  igv_trfo_tj.csv
Vehicle_Tools/performanceTools/: datacompare.py  dataview.py
bash/: .zshrc  Regression_Adaptive_Design.drawio  adaptive_complete.sh  code_design.drawio  del_dir.sh  entrypoint.sh  install_zsh.sh  miivii.sh  regression.sh  regression_adaptive.sh  update_start.sh
case/: 04-07.py  04-07.txt  1.txt  112_3_4.py  case.txt  plot_lon_csv.py  sum.py  商品.py
case/case/: 1.txt  List_derivation.py  class.py  game.py  test_count.py  weather_forecast.py
case/configparser/: scri_conf.py
case/data_analysis/: 23.csv  demo1.py  request_login.py  数据分析.py
case/def_cases/: def_1.py  def_4.py  def_5.py  def_7.py
case/json/: demo1.py  test.json
case/logging/: 2.py  plot_tools.py
case/matplotlib/: Multiple groups of data display.py  data_case.py  plot.py  task_log_2021-11-30_162731.csv  unix_change_beijng.py
case/numpy/: case2.py
case/pyaotugui/: current_time_size.py  photo_size.py  reboot_ui_vpn.py  terminal.py  xm_reset.py
case/pyautogui/: xm_reset.py
case/pygame/: Gluttonous Shake.py
case/sys_os_%/: python字符串格式化输出.txt  sys.argv.py
case/test/: case3.py
case/version_check_tool/: ssh_check_conf.ini  version.py  version_check_all.py  xm_stop_mqtt.py
case/wps/: excel.py  ┼┼░р╝╞╗о.xls
cmake/: CMakeLists.txt  README.md  main  main.cpp
cmake/func/: color_tools.cpp  getTime.cpp
cmake/include/: color_tools.h  color_tools.hpp  getTime.hpp
cmake/math/: math.cpp  math.hpp
cmake_test/: CMakeCache.txt  CMakeLists.txt  README.md  config.h.in  main.cpp
cmake_test/add/: CMakeLists.txt  add.cpp
cmake_test/include/: getTime.h
configparser/: scri_conf.py
cpp_test/: test.cpp  testcpp
cpp_test/file/: file_read  file_read.cpp  test.csv  test.txt
cpp_test/learing/: build.sh  cout_hello.cpp
cpp_test/learning/: arr_game.cpp  arr_game2.cpp  for.cpp  test
cpp_test/pointer/: int_pointer  strtest.cpp
cpp_test/test/: defind_test  defind_test.cpp  people.cpp  test_so.cpp
cpp_test/time/: time.cpp
data_analysis/: demo2.py
demo/: autodownloads.py  diemnsion.py  game.py  git_server_http.sh  logpush  mem_count  mem_count.cpp  monitor.py  monitor.sh  new_upload.sh  passwd.py  smtp.py  upload.sh  wigv
dev_ws/: build.sh
docker_scripts/: dev_into.sh  dev_stop.sh
document/: C++ 编译 , 一文搞懂 动态库与静态库.md  C++_learning.md  C++学习.md  FMS-vpn.md  MQTT鉴权切换.md  [C++] 一文搞懂静态库与动态库的区别.md  git_server(http).md  git_server.md  logpush优化测试报告.md  pacemaker.md  perf 数据分析.md  perfect_simulator_readme.md  ubuntu.md  参数验证.md  各参数存放路径.md  多设备文件夹同步.md  天津港第二集装箱码头有限公司机损事故简报表7-23.docx  定期网络排查.md  手册.md  新车大礼包.md  校准参数独立存储落地方案 V0.1.md  禾赛垂直激光标定方法.doc  问题排查.md
else/: 112_3_1.py  112_3_2.py  112_3_3.py  Diamond_list.py  case4.py  casse5.py  chassis_speed_test_node.py  demo1.py  file_to_judge.py  game.py  test.sh  二维码制作.py
else/test/: case2.py  (+1 more)
http_bridge/: json_test.py
json/: demo.py
logging/: plot_tools.py  task_log_2021-11-22_141220.csv
matplotlib/: bar.py  csv_convert_excel.py  param.py  plot.py  plot_1.py  plot_case1.py  plot_new.py  plot_test1.py  test.py  test1.py
monitor/: monitor.go  monitor.py  monitor_free.py  tools.py
numpy/: case.py  tree.py
pubsub/: chassis_steering_test_node.py  function_test.py  pose_create.py  rqt_result.sh  turtle1_pub.py
pyautogui/: click_voc.py  current_time_size.py  login.py  xm_reset.py
ros2_srvcli/: l_client.py  l_server.py
ros2_ws/: build.sh  source.sh
routine/: 0331.py
sh/: autodeploy.sh  case.sh  data_collect.sh  installer(https_192.168.109.116_80).sh  rviz2_result.sh  start_rviz.sh  start_second.rviz  test.sh  upload.sh
shell/: autodeploy.sh  denmark.sh  deploy.sh  hesai_deploy.sh  igv  init_todesk.sh  lidarview  logpush  play.sh  rviz2_deploy.sh  test.sh  test_time.sh  timing_clean.sh
socket/: client.py  server.py
ssh/: ssh_cmd.py
threading/: check_threading.py  thread.py  timer.py
tools/: README.md  analysis_transform.py  deploy_nvidia.sh  file_monitor.py  igv_passwd  lock.sh  passwd.py  transfrom_port.py
version_check_tool/: ssh_cat.py  stop_mqtt.py  test.py  version.ini  version.py  version_check_once.py  version_update.py  xm_stop_mqtt.py
wps/: 1.xls  2.xls
(+622 files in other folders)
